# nats-stream-processor-topics

./: .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  quantize_model.py  test_classification_new.py
.github/workflows/: docker-publish.yml
charts/: create-secrets.sh
charts/nats-stream-processor-topics/: Chart.yaml  values.yaml
charts/nats-stream-processor-topics/templates/: NOTES.txt  _helpers.tpl  deployment.yaml  pvc.yaml  service.yaml  serviceaccount.yaml  servicemonitor.yaml
src/: __init__.py  config.py  health.py  logging_setup.py  metrics.py  nats_client.py  service.py  topic_classifier.py  types.py
