[project]
name = "nats-stream-processor-topics"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.10.1",
    "fastapi>=0.118.0",
    "nats-py>=2.11.0",
    "numpy>=2.3.3",
    "optimum[onnxruntime]>=1.17.1",
    "prometheus-client>=0.23.1",
    "pydantic>=2.11.9",
    "python-dotenv>=1.1.1",
    "structlog>=25.4.0",
    "transformers>=4.56.2",
    "uvicorn>=0.37.0",
]
